--- a/app/src/main/res/layout/activity_parse_json.xml
+++ b/app/src/main/res/layout/activity_parse_json.xml
@@ -3,6 +3,18 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_below="@+id/framelauout"
+        android:layout_marginTop="-7dp"
+        android:backgroundTint="@color/White"
+        android:indeterminate="true"
+        android:indeterminateTint="#1a09d6"
+        android:visibility="invisible"
+        android:max="100" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
